Add Some Fonctionalities

--- a/App/locales/en.json
+++ b/App/locales/en.json
@@ -1,7 +1,7 @@
 {
     "loading": "Loading...",
     "devices": "Devices",
-    "groups": "Groups",
+    "groups": "Collections",
     "home": "Home",
     "security": "Security",
     "automation": "Automation",
@@ -22,6 +22,8 @@
   "sign_up": "Sign Up",
   "login_redirect": "Already have an account? Login",
   "or": "Or",
+  "country":"Country",
+  "city":"City",
   "reset_password_prompt": "Please enter your email to reset password",
   "reset_password": "Reset Password",
   "reset_password_email_sent": "An email has been sent to reset your password.",
@@ -87,7 +89,11 @@
     "Thursday": "Thursday",
     "Friday" : "Friday",
     "Saturday":"Saturday",
-    "Sunday": "Sunday"
+    "Sunday": "Sunday",
+    "single_date":"Single date",
+    "time_interval":"Interval",
+    "from":"From",
+    "to":"To"
   },
   "send_notification": "Send Notification",
   "send_email": "Send Email",
@@ -122,10 +128,11 @@
   "temperature_unit": "°c",
   "climatiseur": "Air Conditioner",
   "porte": "Door",
+  "prise" :"socket",
   "modify_option_selected": "Modify option selected",
   "delete_option_selected": "Delete option selected",
   "error_toggling_device_state": "Error toggling device state:",
-  "blinds": "Blinds",
+  "blinds": "shutter",
   "Lamps":"Lamps",
   "add_room": "Add Room",
   "select_room": "Select a Room",
@@ -169,7 +176,7 @@
   "unicast_address": "Unicast Address",
   "element_address": "Element Address",
   "brightness": "Brightness",
-  "control_blinds": "Control Blinds",
+  "control_blinds": "Control shutter",
   "position": "Position",
   "stop": "Stop",
   "Level":"Level",
@@ -186,12 +193,18 @@
   "invalid_qr_code": "Invalid QR code data",
   "camera_permission" : "You've refused to allow this app to access your photos!",
   "select_warning" : "Please select at least one device",
-  "bedroom":"bedroom",
-  "kitchen":"Kitchen",
-  "bathroom":"Bathroom",
-  "garden":"Garden",
-  "kidsroom":"Kidsroom",
-  "livingroom":"livingroom",
+  "Bedroom":"Bedroom",
+  "Kitchen":"Kitchen",
+  "Bathroom":"Bathroom",
+  "Garden":"Garden",
+  "Kidsroom":"Kidsroom",
+  "Livingroom":"Livingroom",
+  "Chambre parentale":"Bedroom",
+  "Cuisine":"Kitchen",
+  "Salle de bain":"Bathroom",
+  "Jardin":"Garden",
+  "hambre enfant":"Kidsroom",
+  "Salon":"Livingroom",
   "personalize":"Personalize",
   "theme": "Theme",
   "darkTheme": "Dark Theme",
