--- a/App/locales/fr.json
+++ b/App/locales/fr.json
@@ -1,10 +1,10 @@
 {
   "loading": "Chargement...",
   "devices": "Appareils",
-  "groups": "Groupes",
+  "groups": "Collections",
   "home": "Accueil",
   "security": "Sécurité",
-  "automation": "Automatisation",
+  "automation": "Auto",
   "location_denied": "Permission d'accéder à l'emplacement refusée",
   "weather_fetch_error": "Échec de la récupération des données météorologiques",
   "sunrise": "Lever du soleil : ",
@@ -22,6 +22,8 @@
   "sign_up": "S'inscrire",
   "login_redirect": "Vous avez déjà un compte ? Connexion",
   "or": "Ou",
+  "country":"Pays",
+  "city":"Ville",
   "reset_password_prompt": "Veuillez entrer votre email pour réinitialiser le mot de passe",
   "reset_password": "Réinitialiser le mot de passe",
   "reset_password_email_sent": "Un email a été envoyé pour réinitialiser votre mot de passe.",
@@ -86,7 +88,11 @@
     "Thursday": "Jeudi",
     "Friday" : "Vendredi",
     "Saturday":"Samedi",
-    "Sunday": "Dimanche"
+    "Sunday": "Dimanche",
+    "single_date":"Seule date",
+    "time_interval":"Intervale",
+    "from":"De",
+    "to":"Jusqu'à"
   },
   
   "send_notification": "Envoyer une notification",
@@ -117,11 +123,12 @@
   "cancel": "Annuler",
   "delete": "Supprimer",
   "modify": "Modifier",
-  "humidity_label": "Humidité :",
-  "luminosity_label": "Luminosité :",
+  "humidity_label": "Humidité",
+  "luminosity_label": "Luminosité",
   "temperature_unit": "°c",
   "climatiseur": "Climatiseur",
   "porte": "Porte",
+  "prise" :"Prise",
   "modify_option_selected": "Option de modification sélectionnée",
   "delete_option_selected": "Option de suppression sélectionnée",
   "error_toggling_device_state": "Erreur lors de la modification de l'état de l'appareil :",
@@ -186,12 +193,18 @@
   "invalid_qr_code": "Données de QR code invalides",
   "camera_permission": "Vous avez refusé d’autoriser cette application à accéder à vos photos!",
   "select_warning" :"Veuillez sélectionner au moins un dispositif",
-  "bedroom":"Chambre parent",
-  "kitchen":"Cuisine",
-  "bathroom":"Salle de bain",
-  "garden":"Jardin",
-  "kidsroom":"Chambre enfant",
-  "livingroom":"Salon",
+  "Bedroom":"Chambre parentale",
+  "Kitchen":"Cuisine",
+  "Bathroom":"Salle de bain",
+  "Garden":"Jardin",
+  "Kidsroom":"Chambre enfant",
+  "Livingroom":"Salon",
+  "Chambre parentale":"Chambre parentale",
+  "Cuisine":"Cuisine",
+  "Salle de bain":"Salle de bain",
+  "Jardin":"Jardin",
+  "hambre enfant":"Chambre enfant",
+  "Salon":"Salon",
   "personalize":"Personnaliser",
   "theme": "Thème",
   "darkTheme": "Thème Sombre",
